--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Bowling | Lettier</title>
+		<title>Bowling ALT</title>
 		<meta charset="UTF-8">
 		<link   href="assets/images/favicon.ico"                     rel="icon"       type="image/png">
 		<link   href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
